# PointOfInterest

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
poi/: asgi.py  settings.py  urls.py  wsgi.py
poi/poi_api/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
poi/poi_api/migrations/: 0001_initial.py
