[tool.poetry]
name = "poi"
version = "0.1.0"
description = ""
authors = ["Sayat Aubakirov <sayat_aubakirov@mail.ru>"]
readme = "README.md"
packages = [
  { include = "poi" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
